[package]
name = "jane-eyre"
version = "0.1.0"
authors = ["Jane Lusby <jlusby@yaah.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "^0.3.0"
tracing-error = "^0.1.2"
indenter = "^0.1.3"

[dev-dependencies]
tracing-subscriber = { version = "0.2.2", default-features = false, features = ["registry", "fmt"] }
tracing = "0.1.13"
