[package]
name = "jane-eyre"
version = "0.1.2"
authors = ["Jane Lusby <jlusby@yaah.dev>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "An Eyre derivative error type with support for tracing-error and help text for error messages"
repository = "https://github.com/yaahc/jane-eyre"
documentation = "https://docs.rs/jane-eyre"
readme = "README.md"
categories = ["rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.3.5"
tracing-error = "0.1.2"
indenter = "0.1.3"

[dev-dependencies]
tracing-subscriber = { version = "0.2.2", default-features = false, features = ["registry", "fmt"] }
tracing = "0.1.12"
