[package]
name = "jane-eyre"
version = "0.4.0"
authors = ["Jane Lusby <jlusby@yaah.dev>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "By Currer Bell"
repository = "https://github.com/yaahc/jane-eyre"
documentation = "https://docs.rs/jane-eyre"
readme = "README.md"
categories = ["rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
